2008-07-02  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: add support for AIX 64bit builds via setting the ar
      archiever call in $AR env variable.
      Thanks to James Bostock <james.bostock at comverse.com> for his AIX 
      contributions.
      [Msg-Id: <84E219D8B81E5F4688C4A8992426CD83012A44E9@fr-par-mail01.comverse.com>] 

2008-07-02  Stipe Tolj  <stolj at kannel.org>
    * gwlib/mime.c: fix and relax function mime_entity_to_octstr() for end of
      line chars. Thanks to Paul Bagyenda for providing the patch.
      [Msg-Id: <841FABF4-5733-4610-B097-19120DF0CD4A@dsmagic.com>]
    * test/mime-multipart.txt: demo MIME multipart input file for test/
      test_mime_multipart.c.  

2008-06-30  Stipe Tolj  <stolj at kannel.org>
    * test/test_urltrans.c: fix compiler warning. NLC.

2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * Makefile.in: add 'datarootdir' reference which is required for
      autoconf 2.60 (and higher) output files.
      
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix shell unary expression error. NLC.
    
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * configure[.in]: fix [] bracked output, and change --with-sqlite to
      --with-sqlite2 to make the difference to more recent sqlite3 version
      clear.
      
2008-06-24  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_at.c: fix compiler warnings. NLC.
    
2008-06-24 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsbox.c, gw/urltrans.[ch], 
      test/test_urltrans.c: convert keyword handling to use regex and allow 
      keyword-regex to match the whole msg body instead of only the first 
      word. This patch doesn't change behaviour of keyword handling except 
      keyword-regex now match whole message body. Additionaly, this patch 
      adds escape code '%O' for DCS because it make sense to have DCS as 
      whole instead of splitted into fields.

2008-06-24  Andreas Fink  <andreas at fink.org>